0.7:
* Changed configuration format to use classes to simplify changing configurations
* README, INSTALL and API documentation is now available from the help page

0.6:
* Added this changelog
* Webapp: Added posibility to list directories from within the configured root directory
* Webapp: Added some alert messages for when form input is missing
* API: /api/files now matches all search categories
* API: /api/fs_directories added
* API: /api/directories added
* Added Ant build script to simplify making new releases