@@ -1,6 +1,7 @@
 0.7:
 * Changed configuration format to use classes to simplify changing configurations
 * README, INSTALL and API documentation is now available from the help page
+* API: /api/thumbnail added
 
 0.6:
 * Added this changelog
